2011-06-07  Juan C. Montemayor  <jmont@apple.com>

Reviewed by Darin Adler.

        Make JSStaticFunction and JSStaticValue less "const"
        https://bugs.webkit.org/show_bug.cgi?id=62222

        * API/JSObjectRef.h:
        * API/tests/testapi.c:
        (checkConstnessInJSObjectNames):
        (main):
        * JavaScriptCore.xcodeproj/project.pbxproj:

git-svn-id: svn://svn.chromium.org/blink/trunk@88313 bbb929c8-8fbe-4397-9dbb-9b2b20218538